pqraaa-support/glas2/glas2/perf_test/openmp/matvec/trans/double/glas_log.txt
glas.cpp:8:10: fatal error: 'omp.h' file not found
#include <omp.h>
         ^
1 error generated.
make: *** [glas.o] Error 1
